classDiagram

    class RessourceType{
        type
        enhed 
        krav
    }

    class Ressource {
        id
        titel
        pris
        beskrivelse
        erAktiv
    }

    class Booking{
        bookingID
        starttid
        sluttid
        kravStatus
        betalingStatus
        udleveret
        returneret
    }

    class Person {
        navn
        email
        telefon
    }

    RessourceType "1" -- "1..*" Ressource
    Ressource "1" -- "0..*" Booking
    Booking "1..*" -- "1" Person

